WebSocket handler stub added, among other tiny changes

--- a/Apps/WebInterface/Web.config
+++ b/Apps/WebInterface/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -6,27 +6,34 @@
 <configuration>
   <configSections>
     <sectionGroup name="dotNetOpenAuth" type="DotNetOpenAuth.Configuration.DotNetOpenAuthSection, DotNetOpenAuth.Core">
-      <section name="messaging" type="DotNetOpenAuth.Configuration.MessagingElement, DotNetOpenAuth.Core" requirePermission="false" allowLocation="true" />
-      <section name="reporting" type="DotNetOpenAuth.Configuration.ReportingElement, DotNetOpenAuth.Core" requirePermission="false" allowLocation="true" />
-      <section name="openid" type="DotNetOpenAuth.Configuration.OpenIdElement, DotNetOpenAuth.OpenId" requirePermission="false" allowLocation="true" />
-      <section name="oauth" type="DotNetOpenAuth.Configuration.OAuthElement, DotNetOpenAuth.OAuth" requirePermission="false" allowLocation="true" />
+      <section name="messaging" type="DotNetOpenAuth.Configuration.MessagingElement, DotNetOpenAuth.Core" requirePermission="false" allowLocation="true"/>
+      <section name="reporting" type="DotNetOpenAuth.Configuration.ReportingElement, DotNetOpenAuth.Core" requirePermission="false" allowLocation="true"/>
+      <section name="openid" type="DotNetOpenAuth.Configuration.OpenIdElement, DotNetOpenAuth.OpenId" requirePermission="false" allowLocation="true"/>
+      <section name="oauth" type="DotNetOpenAuth.Configuration.OAuthElement, DotNetOpenAuth.OAuth" requirePermission="false" allowLocation="true"/>
     </sectionGroup>
   </configSections>
-    <!--
+  <!--
   <appSettings>
     <add key="DefaultProviderApplicationName" value="TheBall"/>
   </appSettings>
     -->
-  <appSettings file="../../../OIPExternal.config" />
+  <appSettings file="../../../OIPExternal.config"/>
+  <!--
+    For a description of web.config changes for .NET 4.5 see http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.5" />
+      </system.Web>
+  -->
   <system.web>
-    <compilation debug="true" targetFramework="4.0" />
-    <customErrors mode="Off" />
+    <compilation debug="true" targetFramework="4.5"/>
+    <customErrors mode="Off"/>
     <authentication mode="Forms">
-      <forms loginUrl="/about/oip-public/oip-layout-register.phtml" timeout="2880" defaultUrl="/auth/account/website/oip-account/oip-layout-account-welcome.phtml" />
+      <forms loginUrl="/about/oip-public/oip-layout-register.phtml" timeout="2880" defaultUrl="/auth/account/website/oip-account/oip-layout-account-welcome.phtml"/>
     </authentication>
-    <authorization>
-    </authorization>
-    <sessionState mode="Off" />
+    <authorization/>
+    <sessionState mode="Off"/>
     <!--
     <httpRuntime requestValidationMode="2.0" />
     -->
@@ -41,7 +48,8 @@
       </providers>
     </sessionState>
     -->
-    <httpRuntime maxRequestLength="512000"/>
+    <httpRuntime maxRequestLength="512000" targetFramework="4.5"/>
+    <pages controlRenderingCompatibilityVersion="4.0"/>
   </system.web>
   <location path="grp">
     <system.web>
@@ -78,36 +86,37 @@
     -->
     <defaultDocument enabled="true">
       <files>
-        <clear />
-        <add value="index.aspx" />
+        <clear/>
+        <add value="index.aspx"/>
       </files>
     </defaultDocument>
     <handlers>
-      <add name="DeveloperBlobStorageHandler" path="/dev/*" verb="*" type="WebInterface.DeveloperBlobStorageHandler" resourceType="Unspecified" requireAccess="None" />
-      <add name="AnonymousBlobStorageHandlerWww" path="/www-public/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified" />
-      <add name="AnonymousBlobStorageHandlerWwwMedia" path="/AaltoGlobalImpact.OIP/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified" />
-      <add name="AnonymousBlobStorageHandlerWwwAssets" path="/assets/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified" />
-      <add name="AnonymousBlobStorageHandlerAssets" path="/oip-additions/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified" />
-      <add name="AnonymousBlobStorageHandlerBootstrap" path="/bootstrap-default/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified" />
-      <add name="AnonymousBlobStorageHandlerGrp" path="/grp/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified" />
-      <add name="AnonymousBlobStorageHandlerPublic" path="/public/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified" />
-      <add name="AuthorizedBlobStorageHandlerAbout" path="/about/*" verb="*" type="WebInterface.AuthorizedBlobStorageHandler" resourceType="Unspecified" requireAccess="None" />
-      <add name="AuthorizedBlobStorageHandlerAuth" path="/auth/*" verb="*" type="WebInterface.AuthorizedBlobStorageHandler" resourceType="Unspecified" />
-      <add name="EmailValidationHandler" path="/emailvalidation/*" verb="*" type="WebInterface.EmailValidationHandler" resourceType="Unspecified" />
+      <add name="DeveloperBlobStorageHandler" path="/dev/*" verb="*" type="WebInterface.DeveloperBlobStorageHandler" resourceType="Unspecified" requireAccess="None"/>
+      <add name="AnonymousBlobStorageHandlerWww" path="/www-public/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified"/>
+      <add name="AnonymousBlobStorageHandlerWwwMedia" path="/AaltoGlobalImpact.OIP/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified"/>
+      <add name="AnonymousBlobStorageHandlerWwwAssets" path="/assets/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified"/>
+      <add name="AnonymousBlobStorageHandlerAssets" path="/oip-additions/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified"/>
+      <add name="AnonymousBlobStorageHandlerBootstrap" path="/bootstrap-default/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified"/>
+      <add name="AnonymousBlobStorageHandlerGrp" path="/grp/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified"/>
+      <add name="AnonymousBlobStorageHandlerPublic" path="/public/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified"/>
+      <add name="AuthorizedBlobStorageHandlerAbout" path="/about/*" verb="*" type="WebInterface.AuthorizedBlobStorageHandler" resourceType="Unspecified" requireAccess="None"/>
+      <add name="AuthorizedBlobStorageHandlerAuth" path="/auth/*" verb="*" type="WebInterface.AuthorizedBlobStorageHandler" resourceType="Unspecified"/>
+      <add name="EmailValidationHandler" path="/emailvalidation/*" verb="*" type="WebInterface.EmailValidationHandler" resourceType="Unspecified"/>
+      <add name="WebSocketHandler" path="/websocket/*" verb="*" type="WebInterface.WebSocketHandler" resourceType="Unspecified"/>
     </handlers>
   </system.webServer>
   <system.net>
-    <defaultProxy enabled="true" />
+    <defaultProxy enabled="true"/>
     <settings>
       <!-- This setting causes .NET to check certificate revocation lists (CRL) 
-			     before trusting HTTPS certificates.  But this setting tends to not 
-			     be allowed in shared hosting environments. -->
+           before trusting HTTPS certificates.  But this setting tends to not 
+           be allowed in shared hosting environments. -->
       <!--<servicePointManager checkCertificateRevocationList="true"/>-->
     </settings>
   </system.net>
   <runtime>
     <!-- This prevents the Windows Event Log from frequently logging that HMAC1 is being used (when the other party needs it). -->
-    <legacyHMACWarning enabled="0" />
+    <legacyHMACWarning enabled="0"/>
   </runtime>
   <dotNetOpenAuth>
     <messaging>
@@ -119,28 +128,28 @@
       </untrustedWebRequest>
     </messaging>
     <!-- Allow DotNetOpenAuth to publish usage statistics to library authors to improve the library. -->
-    <reporting enabled="true" />
+    <reporting enabled="true"/>
     <openid>
       <relyingParty>
         <security requireSsl="false">
           <!-- Uncomment the trustedProviders tag if your relying party should only accept positive assertions from a closed set of OpenID Providers. -->
           <!--<trustedProviders rejectAssertionsFromUntrustedProviders="true">
-						<add endpoint="https://www.google.com/accounts/o8/id" />
-					</trustedProviders>-->
+            <add endpoint="https://www.google.com/accounts/o8/id" />
+          </trustedProviders>-->
         </security>
         <behaviors>
           <!-- The following OPTIONAL behavior allows RPs to use SREG only, but be compatible
-					     with OPs that use Attribute Exchange (in various formats). -->
-          <add type="DotNetOpenAuth.OpenId.RelyingParty.Behaviors.AXFetchAsSregTransform, DotNetOpenAuth.OpenId.RelyingParty" />
+               with OPs that use Attribute Exchange (in various formats). -->
+          <add type="DotNetOpenAuth.OpenId.RelyingParty.Behaviors.AXFetchAsSregTransform, DotNetOpenAuth.OpenId.RelyingParty"/>
         </behaviors>
       </relyingParty>
     </openid>
   </dotNetOpenAuth>
   <uri>
     <!-- The uri section is necessary to turn on .NET 3.5 support for IDN (international domain names),
-		     which is necessary for OpenID urls with unicode characters in the domain/host name.
-		     It is also required to put the Uri class into RFC 3986 escaping mode, which OpenID and OAuth require. -->
-    <idn enabled="All" />
-    <iriParsing enabled="true" />
+         which is necessary for OpenID urls with unicode characters in the domain/host name.
+         It is also required to put the Uri class into RFC 3986 escaping mode, which OpenID and OAuth require. -->
+    <idn enabled="All"/>
+    <iriParsing enabled="true"/>
   </uri>
 </configuration>
