--- a/Apps/WebInterface/Web.config
+++ b/Apps/WebInterface/Web.config
@@ -18,16 +18,8 @@
   </appSettings>
     -->
   <appSettings file="../../../OIPExternal.config"/>
-  <!--
-    For a description of web.config changes for .NET 4.5 see http://go.microsoft.com/fwlink/?LinkId=235367.
-
-    The following attributes can be set on the <httpRuntime> tag.
-      <system.Web>
-        <httpRuntime targetFramework="4.5" />
-      </system.Web>
-  -->
   <system.web>
-    <compilation debug="true" targetFramework="4.5"/>
+    <compilation debug="true" targetFramework="4.0"/>
     <customErrors mode="Off"/>
     <authentication mode="Forms">
       <forms loginUrl="/about/oip-public/oip-layout-register.phtml" timeout="2880" defaultUrl="/auth/account/website/oip-account/oip-layout-account-welcome.phtml"/>
@@ -48,7 +40,7 @@
       </providers>
     </sessionState>
     -->
-    <httpRuntime maxRequestLength="512000" targetFramework="4.5"/>
+    <httpRuntime maxRequestLength="512000"/>
     <pages controlRenderingCompatibilityVersion="4.0"/>
   </system.web>
   <location path="grp">
