--- a/Abstractions/AbstractionContent/AbstractionContent.csproj
+++ b/Abstractions/AbstractionContent/AbstractionContent.csproj
@@ -42,12 +42,14 @@
   <ItemGroup>
     <Content Include="..\..\Apps\WorkerTemplate\CaloomUI\caloomxml\CaloomCore.xml">
       <Link>TheBallCore\CaloomCore.xml</Link>
+      <SubType>Designer</SubType>
     </Content>
     <Content Include="..\..\Apps\WorkerTemplate\CaloomUI\caloomxml\CaloomHousing.xml">
       <Link>TheBallCore\CaloomHousing.xml</Link>
     </Content>
     <Content Include="..\..\Apps\WorkerTemplate\CaloomUI\caloomxml\CaloomSchools.xml">
       <Link>TheBallCore\CaloomSchools.xml</Link>
+      <SubType>Designer</SubType>
     </Content>
     <Content Include="..\..\Apps\WorkerTemplate\CaloomUI\caloomxml\OIPBallInstance.xml">
       <Link>TheBallCore\OIPBallInstance.xml</Link>
