Modified categories to have parent-links and title/excerpt/image content

--- a/Abstractions/AbstractionContent/AbstractionContent.csproj
+++ b/Abstractions/AbstractionContent/AbstractionContent.csproj
@@ -46,6 +46,7 @@
     </Content>
     <Content Include="..\..\Apps\WorkerTemplate\CaloomUI\caloomxml\CaloomHousing.xml">
       <Link>TheBallCore\CaloomHousing.xml</Link>
+      <SubType>Designer</SubType>
     </Content>
     <Content Include="..\..\Apps\WorkerTemplate\CaloomUI\caloomxml\CaloomSchools.xml">
       <Link>TheBallCore\CaloomSchools.xml</Link>
