--- a/Apps/AzureSupport/AzureSupport.csproj
+++ b/Apps/AzureSupport/AzureSupport.csproj
@@ -63,6 +63,9 @@
     <Compile Include="..\..\Abstractions\AbstractionContent\Operation\Out\OperationAbstractionFromOIPBallInstance.designer.cs">
       <Link>Abstractions\OperationAbstractionFromOIPBallInstance.designer.cs</Link>
     </Compile>
+    <Compile Include="..\..\Abstractions\AbstractionContent\Operation\Out\OperationAbstractionFromTheBallCore.designer.cs">
+      <Link>Abstractions\OperationAbstractionFromTheBallCore.designer.cs</Link>
+    </Compile>
     <Compile Include="..\..\Abstractions\AbstractionContent\TheBallCore\Out\CaloomCore.designer.cs">
       <Link>Abstractions\CaloomCore.designer.cs</Link>
     </Compile>
@@ -78,6 +81,8 @@
     <Compile Include="..\..\Abstractions\AbstractionContent\TheBallCore\Out\TheBallCore.designer.cs">
       <Link>Abstractions\TheBallCore.designer.cs</Link>
     </Compile>
+    <Compile Include="TheBall.CORE\CreateSpecifiedInformationObjectWithValuesImplementation.cs" />
+    <Compile Include="TheBall.CORE\DeleteSpecifiedInformationObjectImplementation.cs" />
     <Compile Include="Caloom.CORE\CollectionUpdateImplementation.cs" />
     <Compile Include="Caloom.CORE\RemoveSubProductUsageImplementation.cs" />
     <Compile Include="Caloom.CORE\SetSubProductUsageImplementation.cs" />
