Updated to use the Azure Web Farm - to support .NET 4.5 and new Windows Server 2012 stack. Note! Issues with multiple web farms on web publish; works with one.

--- a/Apps/WebInterface/WebInterface.csproj
+++ b/Apps/WebInterface/WebInterface.csproj
@@ -13,7 +13,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>WebInterface</RootNamespace>
     <AssemblyName>WebInterface</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
@@ -147,6 +147,7 @@
     <None Include="Properties\PublishProfiles\theball - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\Web Role OIPSSL.pubxml" />
     <None Include="Properties\PublishProfiles\oip.msunit.citrus.fi.pubxml" />
+    <None Include="Properties\PublishProfiles\WebFarmTest.pubxml" />
     <None Include="Properties\PublishProfiles\www.aaltoglobalimpact.org.pubxml" />
     <None Include="Properties\PublishProfiles\www.globalimpact.aalto.fi.pubxml" />
   </ItemGroup>
