--- a/Apps/packages/repositories.config
+++ b/Apps/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\TheBallWebFarm\packages.config" />
   <repository path="..\wa-accelerator-webroles\code\AzureMultiTenantApp.Web\packages.config" />
   <repository path="..\workerroleaccelerator\src\WorkerRoleAccelerator.Core\packages.config" />
 </repositories>
