--- a/Apps/WebInterface/Web.config
+++ b/Apps/WebInterface/Web.config
@@ -18,8 +18,16 @@
   </appSettings>
     -->
   <appSettings file="../../../OIPExternal.config"/>
+  <!--
+    For a description of web.config changes for .NET 4.5 see http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.5" />
+      </system.Web>
+  -->
   <system.web>
-    <compilation debug="true" targetFramework="4.0"/>
+    <compilation debug="true" targetFramework="4.5"/>
     <customErrors mode="Off"/>
     <authentication mode="Forms">
       <forms loginUrl="/about/oip-public/oip-layout-register.phtml" timeout="2880" defaultUrl="/auth/account/website/oip-account/oip-layout-account-welcome.phtml"/>
