--- a/Apps/AzureSupport/AzureSupport.csproj
+++ b/Apps/AzureSupport/AzureSupport.csproj
@@ -81,6 +81,10 @@
     <Compile Include="..\..\Abstractions\AbstractionContent\TheBallCore\Out\TheBallCore.designer.cs">
       <Link>Abstractions\TheBallCore.designer.cs</Link>
     </Compile>
+    <Compile Include="AdditionalFormatSupport.cs" />
+    <Compile Include="Partials\AddressAndLocationCollection.cs" />
+    <Compile Include="Partials\TextContent.cs" />
+    <Compile Include="Partials\TextContentCollection.cs" />
     <Compile Include="TheBall.CORE\CreateSpecifiedInformationObjectWithValuesImplementation.cs" />
     <Compile Include="TheBall.CORE\DeleteSpecifiedInformationObjectImplementation.cs" />
     <Compile Include="Caloom.CORE\CollectionUpdateImplementation.cs" />
