--- a/Apps/WebInterface/Web.config
+++ b/Apps/WebInterface/Web.config
@@ -48,7 +48,7 @@
       </providers>
     </sessionState>
     -->
-    <httpRuntime maxRequestLength="512000"/>
+    <httpRuntime targetFramework="4.5" maxRequestLength="512000"/>
     <pages controlRenderingCompatibilityVersion="4.0"/>
   </system.web>
   <location path="grp">
