Neutralized the negotiation members through interface (can be used in other protocols or variations, including EKE with secret sharing over SSL prior to actual EKE)

--- a/Apps/SecuritySupport/SecuritySupport.csproj
+++ b/Apps/SecuritySupport/SecuritySupport.csproj
@@ -46,6 +46,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="INegotiationProtocolMember.cs" />
     <Compile Include="ProtectionSupport.cs" />
     <Compile Include="SecurityNegotiationManager.cs" />
     <Compile Include="SymmetricSupport.cs" />
