InformationInput structures partially implemented, JsonFx library added for initial tests of JSON serialization on data inputs...

--- a/Apps/AzureSupport/AzureSupport.csproj
+++ b/Apps/AzureSupport/AzureSupport.csproj
@@ -36,6 +36,9 @@
       <HintPath>Ext\AWSSDK.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="JsonFx">
+      <HintPath>..\..\Tools\Ext\JsonFx.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.WindowsAzure.Configuration, Version=1.8.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.WindowsAzure.StorageClient, Version=1.7.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System" />
@@ -81,6 +84,8 @@
     <Compile Include="..\..\Abstractions\AbstractionContent\TheBallCore\Out\TheBallCore.designer.cs">
       <Link>Abstractions\TheBallCore.designer.cs</Link>
     </Compile>
+    <Compile Include="InstanceConfiguration.cs" />
+    <Compile Include="JSONSupport.cs" />
     <Compile Include="TheBall.CORE\CreateAndSendEmailValidationForDeviceJoinConfirmationImplementation.cs" />
     <Compile Include="TheBall.CORE\DeleteDeviceMembershipImplementation.cs" />
     <Compile Include="TheBall.CORE\SetDeviceMembershipValidationAndActiveStatusImplementation.cs" />
