Operation structure for Fetch and Process the information

--- a/Apps/AzureSupport/AzureSupport.csproj
+++ b/Apps/AzureSupport/AzureSupport.csproj
@@ -84,6 +84,8 @@
     <Compile Include="..\..\Abstractions\AbstractionContent\TheBallCore\Out\TheBallCore.designer.cs">
       <Link>Abstractions\TheBallCore.designer.cs</Link>
     </Compile>
+    <Compile Include="TheBall.CORE\ProcessFetchedInputsImplementation.cs" />
+    <Compile Include="TheBall.CORE\FetchInputInformationImplementation.cs" />
     <Compile Include="TheBall.CORE\CreateAndSendEmailValidationForInformationInputConfirmationImplementation.cs" />
     <Compile Include="TheBall.CORE\DeleteInformationInputImplementation.cs" />
     <Compile Include="TheBall.CORE\SetInformationInputValidationAndActiveStatusImplementation.cs" />
