InstanceSettings.config added

--- a/Apps/WebInterface/Web.config
+++ b/Apps/WebInterface/Web.config
@@ -16,8 +16,13 @@
   <appSettings>
     <add key="DefaultProviderApplicationName" value="TheBall"/>
   </appSettings>
-    -->
+  <appSettings>
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+  </appSettings>
   <appSettings file="../../../OIPExternal.config"/>
+    -->
+  <appSettings file="InstanceSettings.config"/>
+
   <!--
     For a description of web.config changes for .NET 4.5 see http://go.microsoft.com/fwlink/?LinkId=235367.
 
