--- a/Apps/WebInterface/WebInterface.csproj
+++ b/Apps/WebInterface/WebInterface.csproj
@@ -142,16 +142,14 @@
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="..\..\..\OIPExternal.config">
-      <Link>OIPExternal.config</Link>
-      <SubType>Designer</SubType>
-    </Content>
+    <Content Include="InstanceSettings.config" />
     <None Include="Properties\PublishProfiles\demooip.aaltoglobalimpact.org.pubxml" />
     <None Include="Properties\PublishProfiles\demopublicoip.aaltoglobalimpact.org.pubxml" />
     <None Include="Properties\PublishProfiles\demowww.aaltoglobalimpact.org.pubxml" />
     <None Include="Properties\PublishProfiles\demowww.weconomy.protonit.net.pubxml" />
     <None Include="Properties\PublishProfiles\FilesystemTest.pubxml" />
     <None Include="Properties\PublishProfiles\globalimpact.aalto.fi.pubxml" />
+    <None Include="Properties\PublishProfiles\schools.caloom.com.pubxml" />
     <None Include="Properties\PublishProfiles\theball - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\theball - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\Web Role OIPSSL.pubxml" />
