Generalized the about, generalized the redirection from root

--- a/Apps/WebInterface/Web.config
+++ b/Apps/WebInterface/Web.config
@@ -35,7 +35,7 @@
     <compilation debug="true" targetFramework="4.5"/>
     <customErrors mode="Off"/>
     <authentication mode="Forms">
-      <forms loginUrl="/about/oip-public/oip-layout-register.phtml" timeout="2880" defaultUrl="/auth/account/website/oip-account/oip-layout-account-welcome.phtml"/>
+      <forms loginUrl="/about/index.html" timeout="2880" defaultUrl="/auth/account/website/oip-account/oip-layout-account-welcome.phtml"/>
     </authentication>
     <authorization/>
     <sessionState mode="Off"/>
