Updated to be more configurable (still app.config reference in webtemplatemanager)

--- a/Tools/WebTemplateManager/app.config
+++ b/Tools/WebTemplateManager/app.config
@@ -8,7 +8,10 @@
     <applicationSettings>
         <WebTemplateManager.Properties.Settings>
             <setting name="CurrentActiveContainerName" serializeAs="String">
+              <!--
                 <value>demooip-aaltoglobalimpact-org</value>
+                -->
+              <value>schools-caloom-com</value>
             </setting>
         </WebTemplateManager.Properties.Settings>
     </applicationSettings>
