--- a/Apps/WebInterface/InstanceSettings.config
+++ b/Apps/WebInterface/InstanceSettings.config
@@ -6,7 +6,7 @@
   <add key="DeveloperGroupID" value="developer-00000000000000000000000000" />
   <add key="EmailFromAddress" value="no-reply-caloom@protonit.net"/>
   <add key="EmailValidationURLWithoutID" value="http://demooip.aaltoglobalimpact.org/emailvalidation/"/>
-  <add key="WorkerActiveContainerName" value="demooip-aaltoglobalimpact-org" />
+  <add key="WorkerActiveContainerName" value="schools-caloom-com" />
   <add key="EmailDeviceJoinMessageFormat" value="Your confirmation is required to trust the following device '{0}' to be joined to trust within {1} ID {2}. 
 
 Click the following link to confirm this action:
