Email registration and unregistration implemented at account operation level

--- a/Apps/WebInterface/InstanceSettings.config
+++ b/Apps/WebInterface/InstanceSettings.config
@@ -4,22 +4,22 @@
   <add key="DeveloperBlobContainerName" value="demooip-aaltoglobalimpact-org" />
   <add key="DeveloperAuthPrefix" value="dev" />
   <add key="DeveloperGroupID" value="developer-00000000000000000000000000" />
-  <add key="EmailFromAddress" value="no-reply-caloom@protonit.net"/>
-  <add key="EmailValidationURLWithoutID" value="http://demooip.aaltoglobalimpact.org/emailvalidation/"/>
+  <add key="EmailFromAddress" value="no-reply-schools@caloom.com"/>
+  <add key="EmailValidationURLWithoutID" value="https://schools.caloom.com/emailvalidation/"/>
   <add key="WorkerActiveContainerName" value="schools-caloom-com" />
   <add key="EmailDeviceJoinMessageFormat" value="Your confirmation is required to trust the following device '{0}' to be joined to trust within {1} ID {2}. 
 
 Click the following link to confirm this action:
 {3}"/>
-  <add key="EmailValidationSubjectFormat" value="Welcome to The Open Innovation Platform!"/>
-  <add key="EmailValidationMessageFormat" value="Welcome to The Open Innovation Platform!
+  <add key="EmailValidationSubjectFormat" value="Welcome to Caloom for Schools!"/>
+  <add key="EmailValidationMessageFormat" value="Welcome to Caloom for Schools!
 
-You have just joined the collaboration platform by Aalto Global Impact. Your email address '{0}' has been registered on the OIP system. Before you start your collaboration we simply need to confirm that you did register your email. Please follow the link below during which you might be redirected to perform the authentication on OIP.
+Your email address '{0}' has been registered on the Caloom for Schools. Before you start your collaboration we simply need to confirm that you did register your email. Please follow the link below during which you might be redirected to perform the authentication.
 
 Use the following link to complete your registration (the link is valid for 30 minutes after which you need to resend the validation):
 {1}
 
-Wishing you all the best from OIP team!"/>
+Wishing you all the best from Caloom team!"/>
   <add key="EmailInputJoinMessageFormat" value="Your confirmation is required to allow the following information source '{0}' to be fetched within {1} ID {2}. 
 
 Click the following link to confirm this action:
