--- a/Apps/WebInterface/InstanceSettings.config
+++ b/Apps/WebInterface/InstanceSettings.config
@@ -6,6 +6,8 @@
   <add key="DeveloperGroupID" value="developer-00000000000000000000000000" />
   <add key="EmailFromAddress" value="no-reply-schools@caloom.com"/>
   <add key="EmailValidationURLWithoutID" value="https://schools.caloom.com/emailvalidation/"/>
+  <add key="DefaultAccountTemplateList" value="webui"/>
+  <add key="DefaultGroupTemplateList" value="groupmanagement,categoriesandcontent"/>
   <add key="WorkerActiveContainerName" value="schools-caloom-com" />
   <add key="EmailDeviceJoinMessageFormat" value="Your confirmation is required to trust the following device '{0}' to be joined to trust within {1} ID {2}. 
 
