Disabled view state, changed login to forward to account/ (to be handled with account level redirection)

--- a/Apps/WebInterface/Web.config
+++ b/Apps/WebInterface/Web.config
@@ -35,7 +35,7 @@
     <compilation debug="true" targetFramework="4.5"/>
     <customErrors mode="Off"/>
     <authentication mode="Forms">
-      <forms loginUrl="/about/index.html" timeout="2880" defaultUrl="/auth/account/website/oip-account/oip-layout-account-welcome.phtml"/>
+      <forms loginUrl="/about/index.html" timeout="2880" defaultUrl="/auth/account/"/>
     </authentication>
     <authorization/>
     <sessionState mode="Off"/>
@@ -54,7 +54,7 @@
     </sessionState>
     -->
     <httpRuntime targetFramework="4.5" maxRequestLength="512000"/>
-    <pages controlRenderingCompatibilityVersion="4.0"/>
+    <pages controlRenderingCompatibilityVersion="4.0" enableViewState="false" enableViewStateMac="false"/>
   </system.web>
   <location path="grp">
     <system.web>
