--- a/Apps/WebInterface/InstanceSettings.config
+++ b/Apps/WebInterface/InstanceSettings.config
@@ -7,8 +7,11 @@
   <add key="EmailFromAddress" value="no-reply-schools@caloom.com"/>
   <add key="EmailValidationURLWithoutID" value="https://schools.caloom.com/emailvalidation/"/>
   <add key="DefaultAccountTemplateList" value="webui"/>
+  <add key="AccountDefaultRedirect" value="webui/html/account.html"/>
   <add key="DefaultGroupTemplateList" value="groupmanagement,categoriesandcontent"/>
+  <add key="GroupDefaultRedirect" value="categoriesandcontent/html/group.html"/>
   <add key="WorkerActiveContainerName" value="schools-caloom-com" />
+  <add key="RedirectFromFolderFileName" value="RedirectFromFolder.red"/>
   <add key="EmailDeviceJoinMessageFormat" value="Your confirmation is required to trust the following device '{0}' to be joined to trust within {1} ID {2}. 
 
 Click the following link to confirm this action:
