Group invite, various other things fixed

--- a/Apps/WebInterface/InstanceSettings.config
+++ b/Apps/WebInterface/InstanceSettings.config
@@ -30,7 +30,7 @@ Wishing you all the best from Caloom team!"/>
 Click the following link to confirm this action:
 {3}"/>
   <add key="EmailGroupJoinSubjectFormat" value="Invitation to join collaboration group: {0}"/>
-  <add key="EmailGroupJoinMessageFormat" value="You have been invited to join in the collaboration platform by Aalto Global Impact to collaborate in the group: {0}. 
+  <add key="EmailGroupJoinMessageFormat" value="You have been invited to join in the Caloom for Schools to collaborate in the group: {0}. 
 
 Use the following link to accept the invitation and join the group:
 {1}
