--- a/Apps/WebInterface/Web.config
+++ b/Apps/WebInterface/Web.config
@@ -98,6 +98,7 @@
     <handlers>
       <add name="DeveloperBlobStorageHandler" path="/dev/*" verb="*" type="WebInterface.DeveloperBlobStorageHandler" resourceType="Unspecified" requireAccess="None"/>
       <add name="AnonymousBlobStorageHandlerWww" path="/www-public/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified"/>
+      <add name="AnonymousBlobStorageHandlerWwwHtml" path="/html/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified"/>
       <add name="AnonymousBlobStorageHandlerWwwMedia" path="/AaltoGlobalImpact.OIP/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified"/>
       <add name="AnonymousBlobStorageHandlerWwwAssets" path="/assets/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified"/>
       <add name="AnonymousBlobStorageHandlerAssets" path="/oip-additions/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified"/>
