Caloom for Schools and Business separated for configs (temporary, before the configs are dynamically fetched from blob storage)

--- a/Apps/WebInterface/WebInterface.csproj
+++ b/Apps/WebInterface/WebInterface.csproj
@@ -143,6 +143,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="InstanceSettings.config" />
+    <Content Include="InstanceSettings_CaloomSchools.config" />
+    <None Include="Properties\PublishProfiles\business.caloom.com.pubxml" />
     <None Include="Properties\PublishProfiles\demooip.aaltoglobalimpact.org.pubxml" />
     <None Include="Properties\PublishProfiles\demopublicoip.aaltoglobalimpact.org.pubxml" />
     <None Include="Properties\PublishProfiles\demowww.aaltoglobalimpact.org.pubxml" />
