--- a/Tools/WebTemplateManager/app.config
+++ b/Tools/WebTemplateManager/app.config
@@ -7,11 +7,8 @@
     </configSections>
     <applicationSettings>
         <WebTemplateManager.Properties.Settings>
-            <setting name="CurrentActiveContainerName" serializeAs="String">
-              <!--
-                <value>demooip-aaltoglobalimpact-org</value>
-                -->
-              <value>schools-caloom-com</value>
+            <setting name="AllowedContainerNames" serializeAs="String">
+                <value>schools-caloom-com,business-caloom-com</value>
             </setting>
         </WebTemplateManager.Properties.Settings>
     </applicationSettings>
