--- a/Tools/WebTemplateManager/Properties/Settings.settings
+++ b/Tools/WebTemplateManager/Properties/Settings.settings
@@ -2,8 +2,8 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="WebTemplateManager.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="CurrentActiveContainerName" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">demooip-aaltoglobalimpact-org</Value>
+    <Setting Name="AllowedContainerNames" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">schools-caloom-com,business-caloom-com</Value>
     </Setting>
   </Settings>
 </SettingsFile>
